src/components/Home/Home.css
.content{
    margin: 0px;
    padding: 0px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.contentBanner{
    background-image: url(https://images.unsplash.com/photo-1551632436-cbf8dd35adfa?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80);
    background-position: center center;
    height: 500px;
    background-repeat: no-repeat;
    background-size: cover;
    width: 100%;
}

.catalogArea{
    width: 90%;
    margin-top: 20px;
}

.catalog{
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
    justify-items: center;
    align-items: center;
}

.catalogItem{
    transition: transform .2s;
}

.cropped{
    height: 300px;
    width: 400px;
    overflow: hidden;
}

.croppedTile{
    width: 400px; 
    height: 300px; 
    object-fit: cover;
}
.catalogItem:hover{
    transform: scale(1.05);
}

@media (max-width: 800px){
    .catalog{
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
    }
}

